# Epistemic

./: .env.example  .gitignore  README.md
deploy/: Caddyfile  backup.sh  docker-compose.yml
docs/: DEV.md  MCP.md  PRD.md  PROJECT.md
landing/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
landing/src/: App.tsx  index.css
landing/src/components/: BlurText.tsx  CountUp.tsx  FadeContent.tsx  GradientText.tsx  Magnet.tsx  MathFormula.tsx  SoftAurora.tsx  SpotlightCard.tsx
landing/src/pages/: HomePage.tsx  ReportPage.tsx  home.css  report.css
landing/src/ui/: Glass.tsx
scripts/: requeue_aspect_pipeline.sql  seed_fixtures.sql
server/: Cargo.toml  Dockerfile
server/crates/api/: Cargo.toml
server/crates/api/src/: auth.rs  error.rs  main.rs  state.rs
server/crates/api/src/routes/: auth.rs  claims.rs  collab.rs  evidence.rs  graph.rs  groups.rs  imports.rs  jobs_admin.rs  mod.rs  pdf.rs  projects.rs  relations.rs  views.rs  works.rs
server/crates/core/: Cargo.toml
server/crates/core/migrations/: 001_init.sql  002_embeddings_dim_4096.sql  003_aspects.sql  004_groups_graphs.sql  005_reliability.sql  006_node_comments.sql  007_mcp_tokens.sql
server/crates/core/src/: db.rs  error.rs  lib.rs  util.rs
server/crates/core/src/domain/: collab.rs  dna.rs  enums.rs  jobs.rs  mod.rs  paper.rs  relation.rs
server/crates/core/src/repo/: annotations.rs  aspects.rs  claims.rs  comments.rs  evidence.rs  graph.rs  groups.rs  imports.rs  jobs.rs  mcp_tokens.rs  mod.rs  projects.rs  reading.rs  relations.rs  users.rs  views.rs  works.rs
server/crates/llm/: Cargo.toml
server/crates/llm/prompts/: cite_ctx_schema_v1.json  cite_ctx_v1.md  dna_aspects_schema_v1.json  dna_aspects_v1.md  dna_schema_v1.json  dna_v1.md  dna_vlm_schema_v1.json  dna_vlm_v1.md  pair_schema_v1.json  pair_v1.md
server/crates/llm/src/: batch.rs  client.rs  embed.rs  lib.rs  types.rs
server/crates/mcp/: Cargo.toml
server/crates/mcp/src/: main.rs
server/crates/worker/: Cargo.toml
server/crates/worker/src/: arxiv_html.rs  main.rs  metadata.rs  neighbors.rs  pdf_render.rs
server/crates/worker/src/jobs/: batch_orch.rs  classify_cite.rs  embed.rs  extract.rs  fetch_pdf.rs  grobid.rs  mod.rs  propose.rs  references.rs  resolve.rs
testset/: README.md  eval_gold.py
testset/gold/: 1312.6114.json  1406.2661.json  1409.0473.json  1409.1556.json  1412.6980.json  1508.07909.json  1512.03385.json  1706.03762.json  1810.04805.json  2005.14165.json  2203.02155.json
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts  hooks.ts  types.ts
web/src/components/: Drawer.tsx  Layout.tsx  NodeComments.tsx  PaperCard.tsx  RelationBadge.tsx  StatusDot.tsx
web/src/graph/: EgoView.tsx  MapLegend.tsx  MapView.tsx  aspects.ts  layout.test.mjs  layout.ts  styles.ts
web/src/pages/: EgoPage.tsx  GroupDetailPage.tsx  GroupsPage.tsx  ImportPage.tsx  InvitePage.tsx  LoginPage.tsx  MapPage.tsx  PaperDetailPage.tsx  PapersPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  ReviewPage.tsx  SettingsPage.tsx
web/src/pdf/: PdfViewer.tsx  coords.ts  index.ts  load.ts
web/src/stores/: ui.ts
