[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/api",
    "crates/worker",
    "crates/llm",
    "crates/mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Epistemic Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Web
axum = { version = "0.8", features = ["macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "fs"] }
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }

# DB
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Serde / types
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Auth
argon2 = "0.5"
rand = "0.8"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
    "multipart",
] }

# OpenAPI
utoipa = { version = "5", features = ["uuid", "chrono"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Utils
dotenvy = "0.15"
url = "2"
regex = "1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
bytes = "1"
tempfile = "3"
