[package]
name = "epistemic-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "epistemic-api"
path = "src/main.rs"

[dependencies]
epistemic-core = { path = "../core" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-sqlx-store = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
utoipa = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
time = "0.3"
