[package]
name = "epistemic-worker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "epistemic-worker"
path = "src/main.rs"

[dependencies]
epistemic-core = { path = "../core" }
epistemic-llm = { path = "../llm" }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
tempfile = { workspace = true }
